--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Intelligent Video Analytics Sofware</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Intelligent Video Analytics Software</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -58,11 +58,11 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Intelligent Video Analytics Sofware</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Intelligent Video Analytics Software</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">A Intelligent Video Analytics Sofware by Sakshamapp</p>
+          <p class="text-white-75 font-weight-light mb-5">A Intelligent Video Analytics Software by Sakshamapp</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
@@ -130,7 +130,7 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
                <div class="project-name">
-                Intelligent Video Analytics Sofware
+                Intelligent Video Analytics Software
               </div>
             </div>
           </a>
